// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Dialog should end the dialog when click on the close button 1`] = `
<div>
  <div
    class="css-acd6ac"
  />
  <div>
    Trigger Component
  </div>
</div>
`;

exports[`Dialog Dialog should end the dialog when esc key is pressed 1`] = `
<div>
  <div
    class="css-acd6ac"
  />
  <div>
    Trigger Component
  </div>
</div>
`;

exports[`Dialog Dialog should render just the trigger component of dialog  1`] = `
<div>
  <div>
    Trigger Component
  </div>
</div>
`;
